--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@ Hello! My name is Ardoine Docteur. I am excited to learn in this class.
 
 <body class="assignment">
 </section class="assignment">
-<a href="CSCE 190 Folder/CSCE 190 Problem Statement Rough Draft(Mod Decisive).pdf"><img src="CSCE 190 Folder/images/Problem Statement.png"> 
+<a href="CSCE 190 Folder/CSCE 190 Problem Statement Rough Draft(Mod Decisive).pdf"><img src="CSCE 190 Folder/Problem-Statement.png"> 
 </a>        
 <section class="ass-details">
             <h2>Problem Statement: Making Daily Decisions</h2>
