--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
-Hello! My name is Ardoine Docteur. I am excited to learn in this class.
+
 
 <body class="assignment">
+    <title>CSCE 190: Mod Decisive</title>
 </section class="assignment">
-<a href="CSCE 190 Folder/CSCE 190 Problem Statement Rough Draft(Mod Decisive).pdf"><img src="CSCE 190 Folder/Problem-Statement.png"> 
-</a>        
+<a href="CSCE 190 Folder/CSCE 190 Problem Statement(Mod Decisive).pdf"><img src="CSCE 190 Folder/Problem-Statement.png"></a>        
 <section class="ass-details">
-            <h2>Problem Statement: Making Daily Decisions</h2>
-            <p>: As a daily commuter, and many others, people lack the time to
+    <a href="CSCE 190 Folder/CSCE 190 Problem Statement(Mod Decisive).pdf"><h2>Problem Statement: Making Daily Decisions</h2></a>
+            <p> As a daily commuter, and many others, people lack the time to
                 make decisions. This may include the food they want to eat, the attire they want to don,
                 what they want to do that evening, and so on. Our goal is that by designing an app to
                 address these daily challenges, we are able to effectively accommodate people who
                 lack decision making skills, busy people with no time on their hands to ponder small
                 decisions, and people who simply want to spice up their life a little.
             </p>
-            <a href="CSCE 190 Folder/CSCE 190 Problem Statement(Mod Decisive).pdf">Problem Statement pdf</a>
+          
 
         </section>
 
