--- a/Visual Studio Code CSCE 190/index.html
+++ b/Visual Studio Code CSCE 190/index.html
@@ -3,6 +3,7 @@
 <body class="assignment">
     <title>CSCE 190: Mod Decisive</title>
 </section class="assignment">
+<!-- Problem Statement Assignment-->
 <a href="CSCE 190 Folder/CSCE 190 Problem Statement(Mod Decisive).pdf"><img src="CSCE 190 Folder/Problem-Statement.png"></a>        
 <section class="ass-details">
     <a href="CSCE 190 Folder/CSCE 190 Problem Statement(Mod Decisive).pdf"><h2>Problem Statement: Making Daily Decisions</h2></a>
@@ -16,6 +17,11 @@
           
 
         </section>
-
+        <!-- Affinity Diagram Assignment-->
+        <a href="CSCE 190 Folder/Affinity Diagram(CSCE 190)(Mod Decisive).pdf"><img src="CSCE 190 Folder/affinity diagram(Mod Decisive).png"></a>    
+        <a href="CSCE 190 Folder/Affinity Diagram(CSCE 190)(Mod Decisive).pdf">><h2>Affinity Diagram: Making Daily Decisions</h2></a>
+        <p>
+            My group and I created an affinity diagram to brainstorm the logistics of our desired app. Creating this diagram has allowed us to create a makeshift map for us to adhere to upon the process of creating our app.
+        </p>
 
 </body>
