--- a/Visual Studio Code CSCE 190/index.html
+++ b/Visual Studio Code CSCE 190/index.html
@@ -19,7 +19,7 @@
         </section>
         <!-- Affinity Diagram Assignment-->
         <a href="CSCE 190 Folder/Affinity Diagram(CSCE 190)(Mod Decisive).pdf"><img src="CSCE 190 Folder/affinity diagram(Mod Decisive).png"></a>    
-        <a href="CSCE 190 Folder/Affinity Diagram(CSCE 190)(Mod Decisive).pdf">><h2>Affinity Diagram: Making Daily Decisions</h2></a>
+        <a href="CSCE 190 Folder/Affinity Diagram(CSCE 190)(Mod Decisive).pdf"><h2>Affinity Diagram: Making Daily Decisions</h2></a>
         <p>
             My group and I created an affinity diagram to brainstorm the logistics of our desired app. Creating this diagram has allowed us to create a makeshift map for us to adhere to upon the process of creating our app.
         </p>
