--- a/Visual Studio Code CSCE 190/index.html
+++ b/Visual Studio Code CSCE 190/index.html
@@ -1,7 +1,12 @@
-
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>CSCE 190: Mod Decisive</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
 <body class="assignment">
-    <title>CSCE 190: Mod Decisive</title>
+    <h1>Ardoine Docteur's CSCE 190 Website</h1>
+</body>
 </section class="assignment">
 <!-- Problem Statement Assignment-->
 <a href="CSCE 190 Folder/CSCE 190 Problem Statement(Mod Decisive).pdf"><img src="CSCE 190 Folder/Problem-Statement.png"></a>        
@@ -25,3 +30,4 @@
         </p>
 
 </body>
+</html>
