--- a/Visual Studio Code CSCE 190/index.html
+++ b/Visual Studio Code CSCE 190/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>CSCE 190: Mod Decisive</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="CSCE 190 Folder/styles.css">
     </head>
 <body class="assignment">
     <h1>Ardoine Docteur's CSCE 190 Website</h1>
